# iDEA

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mods.yml  pyproject.toml  requirements.txt  setup.py  temp  test.py
.github/workflows/: test_manybody.yml  test_manybody_long.yml  test_manybody_short.yml
docs/: conf.py  iDEA.rst  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  iDEA.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  iDEA.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt
iDEA/: __init__.py  interactions.py  observables.py  reverse.py  reverse_engineering.py  state.py  system.py  utilities.py
iDEA/iDEA_latest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iDEA/methods/: __init__.py  hartree.py  hartree_fock.py  hybrid.py  interacting.py  kssce.py  lda.py  non_interacting.py
iDEA_latest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: hartree_fock.py
src/iDEA/: __init__.py  interactions.py  non_interacting.py  observables.py  reverse.py  state.py  system.py  utilities.py
src/iDEA/methods/: __init__.py  hartree.py  hartree_fock.py  hybrid.py  interacting.py  lda.py  non_interacting.py
src/iDEA_latest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: iDEA_test_of_time_evolution_states_0_1_2.py  test_manybody.py
tutorial/: example_kssce.ipynb  tutorial.ipynb
tutorial/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
(+15 files in other folders)
