[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "iDEA"
version = "0.1.2"
description = "interacting Dynamic Electrons Approach"
authors = ["Jack Wetherell <jack.wetherell@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
jupyterlab = "^3.3.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autoflake="^1.4.0"
build = "^0.7.0"
twine = "^4.0.0"
